remove margin-block-*

--- a/themes/hugo-theme-stack/assets/scss/partials/layout/search.scss
+++ b/themes/hugo-theme-stack/assets/scss/partials/layout/search.scss
@@ -30,6 +30,10 @@
   }
 }
 
+.search-form p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
 .search-form p:first-child {
   flex-grow: 2;
 }
