fix: remove right sidebar scroll if not needed

--- a/static/css/custom-style.css
+++ b/static/css/custom-style.css
@@ -59,9 +59,11 @@ p {
 .right-sidebar.sticky {
   top: 0;
   height: 100vh;
-  overflow-y: scroll;
 }
-
+.right-sidebar-scroll
+ {
+  overflow-y: scroll;
+ }
 summary.section-title {
   display: flex;
   align-items: center;
