--- a/themes/hugo-theme-stack/layouts/_default/baseof.html
+++ b/themes/hugo-theme-stack/layouts/_default/baseof.html
@@ -25,4 +25,13 @@
         </div>
         {{ partial "footer/include.html" . }}
     </body>
+    <script>
+        const rightSideBar = document.querySelector('.right-sidebar')
+        const summaries = document.querySelectorAll('summary');
+        summaries.forEach(summary => {
+            summary.addEventListener('click', (event) => {
+                rightSideBar.classList.toggle('right-sidebar-scroll')
+            })
+        })
+    </script>
 </html>
