feat(theme): bump to v3.33.0

--- a/themes/hugo-theme-stack/layouts/_default/archives.html
+++ b/themes/hugo-theme-stack/layouts/_default/archives.html
@@ -15,9 +15,8 @@
     {{ end }}
   </header>
 
-  {{ $pages := where .Site.RegularPages "Type" "in" .Site.Params.mainSections }}
-  {{ $notHidden := where .Site.RegularPages "Params.hidden" "!=" true }}
-  {{ $filtered := ($pages | intersect $notHidden) }}
+    {{ $pages := where .Site.RegularPages "Type" "in" .Site.Params.mainSections }}
+    {{ $filtered := where $pages "Params.hidden" "!=" true }}
 
   {{ range $filtered.GroupByDate "2006" }}
     {{ $id := lower (replace .Key " " "-") }}
