feat(theme): bump to 3.3.41

--- a/layouts/partials/article-list/default.html
+++ b/layouts/partials/article-list/default.html
@@ -1,5 +1,5 @@
-{{ $image := partialCached "helper/image" (dict "Context" . "Type"
-"articleList") .RelPermalink "articleList" }}
+{{ $image := partialCached "helper/image" (dict "Context" . "Type" "articleList") .RelPermalink "articleList" }}
 <article class="{{ if $image.exists }}has-image{{ end }}">
+  <!-- customized JLI -->
   {{ partial "article/components/header-from-article-list" . }}
 </article>
