--- a/layouts/partials/footer/include.html
+++ b/layouts/partials/footer/include.html
@@ -1,3 +1,4 @@
 {{ partialCached "footer/components/script.html" . }}
+<!-- customized JLI -->
 <!-- {{ partialCached "footer/components/custom-font.html" . }} -->
 {{ partial "footer/custom.html" . }}
