--- a/layouts/partials/widget/categories.html
+++ b/layouts/partials/widget/categories.html
@@ -1,6 +1,7 @@
 {{- $context := .Context -}}
 {{- $limit := default 10 .Params.limit -}}
 <section class="widget tagCloud">
+  <!-- customized JLI -->
   <details>
     <summary
       class="widget-title section-title"
