--- a/layouts/partials/widget/tag-cloud.html
+++ b/layouts/partials/widget/tag-cloud.html
@@ -3,6 +3,7 @@
 
 
 <section class="widget tagCloud">
+  <!-- customized JLI -->
   <details>
     <summary
       class="widget-title section-title"
