--- a/themes/hugo-theme-stack/assets/scss/partials/layout/article.scss
+++ b/themes/hugo-theme-stack/assets/scss/partials/layout/article.scss
@@ -67,6 +67,7 @@
             }
 
             .article-tags {
+	    	/* customized JLI */
                 flex-wrap: wrap;
                 text-transform: unset;
             }
