--- a/layouts/_default/archives.html
+++ b/layouts/_default/archives.html
@@ -15,23 +15,20 @@
     {{ end }}
   </header>
 
-  {{ $pages := where .Site.RegularPages "Type" "in" .Site.Params.mainSections }}
-  {{ $notHidden := where .Site.RegularPages "Params.hidden" "!=" true }}
-  {{ $filtered := ($pages | intersect $notHidden) }}
+    {{ $pages := where .Site.RegularPages "Type" "in" .Site.Params.mainSections }}
+    {{ $filtered := where $pages "Params.hidden" "!=" true }}
 
-  {{ range $filtered.GroupByDate "2006" }}
+    {{ range $filtered.GroupByDate "2006" }}
     {{ $id := lower (replace .Key " " "-") }}
     <div class="archives-group" id="{{ $id }}">
-      <h2 class="archives-date section-title">
-        <a href="{{ $.RelPermalink }}#{{ $id }}">{{ .Key }}</a>
-      </h2>
-      <div class="article-list--compact archives-page">
-        {{ range .Pages }}
-          {{ partial "article-list/compact" . }}
-        {{ end }}
-      </div>
+        <h2 class="archives-date section-title"><a href="{{ $.RelPermalink }}#{{ $id }}">{{ .Key }}</a></h2>
+        <div class="article-list--compact">
+            {{ range .Pages }}
+                {{ partial "article-list/compact" . }}
+            {{ end }}
+        </div>
     </div>
-  {{ end }}
+    {{ end }}
 
-  {{ partialCached "footer/footer" . }}
+    {{ partialCached "footer/footer" . }}
 {{ end }}
