--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,11 +1,13 @@
 {{ define "main" }}
-    {{ $pages := where .Site.RegularPages "Type" "in" .Site.Params.mainSections }}
-    {{ $notHidden := where .Site.RegularPages "Params.hidden" "!=" true }}
-    {{ $filtered := ($pages | intersect $notHidden) }}
-    {{ $pag := .Paginate ($filtered) }}
+    {{- $paginator := partial "helper/paginator.html" . -}}
 
     <section class="article-list">
-        {{ range $index, $element := $pag.Pages }}
+        {{ range $index, $element := $paginator.Pages }}
+			<!-- customized JLI -->
+			<!-- 
+				pageIndex is used in `header-from-article-list.html` 
+				to add `lazy` attr on `<img>` elements when it equals 3
+			-->
 			{{ .Scratch.Set "pageIndex" $index }}
             {{ partial "article-list/default" . }}
         {{ end }}
