--- a/layouts/partials/article-list/compact.html
+++ b/layouts/partials/article-list/compact.html
@@ -6,7 +6,7 @@
             </h2>
             <footer class="article-time">
                 <time datetime='{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}'>
-                    {{- .Date.Format (or .Site.Params.dateFormat.published "Jan 02, 2006") -}}
+                    {{- .Date | time.Format (or .Site.Params.dateFormat.published "Jan 02, 2006") -}}
                 </time>
             </footer>
         </div>
@@ -25,7 +25,7 @@
                         {{- $Width = $thumbnail.Width -}}
                         {{- $Height = $thumbnail.Height -}}
                     {{- end -}}
-                    
+                    <!-- customized JLI -->
                     <img src="{{ $Permalink }}" 
                         width="{{ $Width }}"
                         height="{{ $Height }}" 
@@ -33,6 +33,7 @@
                         alt="{{ .Params.imageAlt }}" 
 						title="{{ .Params.imageAlt }}" />
                 {{ else }}
+					<!-- customized JLI -->
                     <img src="{{ $image.permalink }}" 
 						loading="lazy" 
 						alt="{{ .Params.imageAlt }}" 
