--- a/themes/hugo-theme-stack/layouts/index.html
+++ b/themes/hugo-theme-stack/layouts/index.html
@@ -1,11 +1,8 @@
 {{ define "main" }}
-    {{ $pages := where .Site.RegularPages "Type" "in" .Site.Params.mainSections }}
-    {{ $notHidden := where .Site.RegularPages "Params.hidden" "!=" true }}
-    {{ $filtered := ($pages | intersect $notHidden) }}
-    {{ $pag := .Paginate ($filtered) }}
+    {{- $paginator := partial "helper/paginator.html" . -}}
 
     <section class="article-list">
-        {{ range $index, $element := $pag.Pages }}
+        {{ range $index, $element := $paginator.Pages }}
             {{ partial "article-list/default" . }}
         {{ end }}
     </section>
