--- a/themes/hugo-theme-stack/layouts/partials/data/title.html
+++ b/themes/hugo-theme-stack/layouts/partials/data/title.html
@@ -1,37 +1,14 @@
-{{- $title := .Title -}}
+{{- $pageTitle := .Title -}}
 {{- $siteTitle := .Site.Title -}}
+{{- $paginator := partial "helper/paginator.html" . -}}
 
-{{- if .IsHome -}}
-    <!-- Homepage, and it's pagination -->
+{{- $title := slice -}}
 
-    <!-- Build paginator -->
-    {{ $pages := where .Site.RegularPages "Section" "in" .Site.Params.mainSections }}
-    {{ $filtered := where $pages "Params.hidden" "!=" true }}
-    {{ $pag := .Paginate ($filtered) }}
-
-    {{ if .Paginator.HasPrev }}
-        <!-- Paginated. Append page number to title -->
-        {{ $title = printf "%s - %s" .Paginator $siteTitle }}
-    {{ else }}
-        {{ $title = $siteTitle}}
-    {{ end }}
-{{- else if eq .Kind "term" -}}
-    <!-- Taxonomy page -->
-
-    <!-- Build paginator -->
-    {{ $notHidden := where .Pages "Params.hidden" "!=" true }}
-    {{ $pag := .Paginate ($notHidden) }}
-
-    <!-- {TAXONOMY_TYPE}: {TAXONOMY_TERM} -->
-    {{ $title = slice (title .Data.Singular) ": " $title }}
-
-    {{ if .Paginator.HasPrev }}
-        <!-- Add page number-->
-        {{ $title = $title | append " - " .Paginator }}
-    {{ end }} 
-
-    {{ $title = $title | append " - " $siteTitle }}
-    {{ $title = delimit $title "" }}
+{{- if and $paginator $paginator.HasPrev -}}
+    <!-- Add page number-->
+    {{ $title = $title | append (printf "Page %d" $paginator.PageNumber) }}
 {{- end -}}
 
-{{ return $title }}
+{{- $title = $title | append (default $siteTitle $pageTitle) -}}
+
+{{ return delimit $title " - " }}
